syntax = "proto3";

package yandex.cloud.servicename.v1;

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "yandex/cloud/api/operation.proto";
import "yandex/cloud/api/tools/options.proto";
import "yandex/cloud/access/access.proto";
import "yandex/cloud/operation/operation.proto";
import "yandex/cloud/validation.proto";
import "yandex/cloud/_templates/servicename/v1/resource_name.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/_templates/servicename/v1;servicename";
option java_package = "yandex.cloud.api.servicename.v1";

// A set of methods for managing resource names.
service ResourceNameService {
  // Returns the specified resource name.
  //
  // To get the list of all available resource names, make a [List] request.
  rpc Get (GetResourceNameRequest) returns (ResourceName) {
    option (google.api.http) = { get: "/servicename/v1/resourceNames/{resource_name_id}" };
  }

  // Retrieves the list of resource names in the specified folder.
  rpc List (ListResourceNamesRequest) returns (ListResourceNamesResponse) {
    option (google.api.http) = { get: "/servicename/v1/resourceNames" };
  }

  // Creates a resource name in the specified folder.
  rpc Create (CreateResourceNameRequest) returns (operation.Operation) {
    option (google.api.http) = { post: "/servicename/v1/resourceNames" body: "*" };
    option (yandex.cloud.api.operation) = {
      metadata: "CreateResourceNameMetadata"
      response: "ResourceName"
    };
  }

  // Updates the specified resource name.
  rpc Update (UpdateResourceNameRequest) returns (operation.Operation) {
    option (google.api.http) = { patch: "/servicename/v1/resourceNames/{resource_name_id}" body: "*" };
    option (yandex.cloud.api.operation) = {
      metadata: "UpdateResourceNameMetadata"
      response: "ResourceName"
    };
  }

  // Deletes the specified resource name.
  rpc Delete (DeleteResourceNameRequest) returns (operation.Operation) {
    option (google.api.http) = { delete: "/servicename/v1/resourceNames/{resource_name_id}" };
    option (yandex.cloud.api.operation) = {
      metadata: "DeleteResourceNameMetadata"
      response: "google.protobuf.Empty"
    };
  }

  //access

  // Lists access bindings for the specified resource name.
  rpc ListAccessBindings (access.ListAccessBindingsRequest) returns (access.ListAccessBindingsResponse) {
    option (google.api.http) = { get: "/servicename/v1/resourceNames/{resource_id}:listAccessBindings" };
  }

  // Sets access bindings for the resource name.
  rpc SetAccessBindings (access.SetAccessBindingsRequest) returns (operation.Operation) {
    option (google.api.http) = { post: "/servicename/v1/resourceNames/{resource_id}:setAccessBindings" body: "*" };
    option (yandex.cloud.api.operation) = {
      metadata: "access.SetAccessBindingsMetadata"
      response: "google.protobuf.Empty"
    };
  }

  // Updates access bindings for the specified resource name.
  rpc UpdateAccessBindings (access.UpdateAccessBindingsRequest) returns (operation.Operation) {
    option (google.api.http) = { post: "/servicename/v1/resourceNames/{resource_id}:updateAccessBindings" body: "*" };
    option (yandex.cloud.api.operation) = {
      metadata: "access.UpdateAccessBindingsMetadata"
      response: "google.protobuf.Empty"
    };
    option (yandex.cloud.api.tools.method).lint_skip.http_verb = true;
  }

  // Lists operations for the specified resource name.
  rpc ListOperations (ListResourceNameOperationsRequest) returns (ListResourceNameOperationsResponse) {
    option (google.api.http) = { get: "/servicename/v1/resourceNames/{resource_name_id}/operations" };
  }
}

message GetResourceNameRequest {
  // ID of the resource name to return.
  //
  // To get a resource name ID make a [ResourceNameService.List] request.
  string resource_name_id = 1 [(required) = true, (length) = "<=50"];
}

message ListResourceNamesRequest {
  // ID of the folder to list resource names in.
  //
  // To get the folder ID make a [yandex.cloud.resourcemanager.v1.FolderService.List] request.
  string folder_id = 1 [(required) = true, (length) = "<=50"];

  // The maximum number of results per page to return. If the number of available
  // results is larger than `page_size`, the service returns a [ListResourceNamesResponse.next_page_token]
  // that can be used to get the next page of results in subsequent list requests.
  // Default value: 100.
  int64 page_size = 2 [(value) = "<=1000"];

  // Page token. To get the next page of results, set `page_token` to the
  // [ListResourceNamesResponse.next_page_token] returned by a previous list request.
  string page_token = 3 [(length) = "<=100"];

  // A filter expression that filters resource names listed in the response.
  //
  // The expression must specify:
  // 1. The field name. Currently you can use filtering only on [ResourceName.name] field.
  // 2. An `=` operator.
  // 3. The value in double quotes (`"`). Must be 3-63 characters long and match the regular expression `[a-z][-a-z0-9]{1,61}[a-z0-9]`.
  // Example of a filter: `name=my-resourcename`.
  string filter = 4 [(length) = "<=1000"];
}

message ListResourceNamesResponse {
  // List of resource name in the specified folder.
  repeated ResourceName resource_names = 1;

  // Token for getting the next page of the list. If the number of results is greater than
  // the specified [ListResourceNamesRequest.page_size], use `next_page_token` as the value
  // for the [ListResourceNamesRequest.page_token] parameter in the next list request.
  //
  // Each subsequent page will have its own `next_page_token` to continue paging through the results.
  string next_page_token = 2;
}

message CreateResourceNameRequest {
  // ID of the folder to create a resource name in.
  //
  // To get a folder ID make a [yandex.cloud.resourcemanager.v1.FolderService.List] request.
  string folder_id = 1 [(required) = true, (length) = "<=50"];

  // Name of the resource name.
  // The name must be unique within the folder.
  string name = 2 [(pattern) = "|[a-z][-a-z0-9]{1,61}[a-z0-9]"];

  // Description of the resource name.
  string description = 3 [(length) = "<=256"];

  // Resource name labels as `key:value` pairs.
  map<string, string> labels = 4 [(yandex.cloud.size) = "<=64", (length) = "<=63", (pattern) = "[-_0-9a-z]*", (map_key).length = "1-63", (map_key).pattern = "[a-z][-_0-9a-z]*"];

  // ID of the availability zone where resource name resides.
  // To get a list of available zones, make a [yandex.cloud.compute.v1.ZoneService.List] request.
  string zone_id = 5 [(required) = true, (length) = "<=50"];
}

message CreateResourceNameMetadata {
  // ID of the resource name that is being created.
  string resource_name_id = 1;
}

message UpdateResourceNameRequest {
  // ID of the resource name to update.
  //
  // To get the resource name ID make a [ResourceNameService.List] request.
  string resource_name_id = 1 [(required) = true, (length) = "<=50"];

  // Field mask that specifies which attributes of the resource name should be updated.
  google.protobuf.FieldMask update_mask = 2;

  // New name for the resource name.
  // The name must be unique within the folder.
  string name = 3 [(pattern) = "|[a-z][-a-z0-9]{1,61}[a-z0-9]"];

  // New description of the resource name.
  string description = 4 [(length) = "<=256"];

  // Resource name labels as `key:value` pairs.
  //
  // Existing set of labels is completely replaced by the provided set, so if you just want
  // to add or remove a label:
  // 1. Get the current set of labels with a [ResourceNameService.Get] request.
  // 2. Add or remove a label in this set.
  // 3. Send the new set in this field.
  map<string, string> labels = 5 [(yandex.cloud.size) = "<=64", (length) = "<=63", (pattern) = "[-_0-9a-z]*", (map_key).length = "1-63", (map_key).pattern = "[a-z][-_0-9a-z]*"];

}

message UpdateResourceNameMetadata {
  // ID of the resource name that is being updated.
  string resource_name_id = 1;
}

message DeleteResourceNameRequest {
  // ID of the resource name to delete.
  //
  // To get a resource name ID make a [ResourceNameService.List] request.
  string resource_name_id = 1 [(required) = true, (length) = "<=50"];
}

message DeleteResourceNameMetadata {
  // ID of the resource name that is being deleted.
  string resource_name_id = 1;
}

message ListResourceNameOperationsRequest {
  // ID of the resource name to list operations for.
  //
  // To get a resource name ID make a [ResourceNameService.List] request.
  string resource_name_id = 1 [(required) = true, (length) = "<=50"];

  // The maximum number of results per page to return. If the number of available
  // results is larger than [page_size], the service returns a [ListResourceNameOperationsResponse.next_page_token]
  // that can be used to get the next page of results in subsequent list requests.
  // Default value: 100.
  int64 page_size = 2 [(value) = "<=1000"];

  // Page token. To get the next page of results, set [page_token] to the
  // [ListResourceNameOperationsResponse.next_page_token] returned by a previous list request.
  string page_token = 3 [(length) = "<=100"];
}

message ListResourceNameOperationsResponse {
  // List of operations for the specified resource name.
  repeated operation.Operation operations = 1;

  // Token for getting the next page of the list. If the number of results is greater than
  // the specified [ListResourceNameOperationsRequest.page_size], use `next_page_token` as the value
  // for the [ListResourceNameOperationsRequest.page_token] parameter in the next list request.
  //
  // Each subsequent page will have its own `next_page_token` to continue paging through the results.
  string next_page_token = 2;
}
